Fix item alignment and column sizes in tables

--- a/themes/elos/assets/stylesheets/theme-application.scss
+++ b/themes/elos/assets/stylesheets/theme-application.scss
@@ -52,7 +52,17 @@ body.theme-elos {
     }
 
     td {
-      vertical-align: middle;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+
+      &.td-titles {
+        flex-direction: column;
+
+        > * {
+          align-self: flex-start;
+        }
+      }
     }
 
     .dropdown-opts {
